# natural_language_hubert

./: .gitignore  .gitmodules  README.md
catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/src/myrobot_description/: CMakeLists.txt  check_urdf.launch
src/: CMakeLists.txt
src/hubert_kinematics/: CMakeLists.txt  check_urdf.launch  check_urdf_gui.launch  package.xml  rviz_config.rviz  setup.py
src/hubert_kinematics/src/: hubert_actions.py  hubert_talker.py  ik_talker.py  ik_test.py  pcm2angle.py  talker.py
src/hubert_kinematics/urdf/: test_robot.urdf.xacro
src/hubert_launch/: CMakeLists.txt  package.xml
src/hubert_launch/launch/: hubert.launch
src/hubert_launch/msg/: LabeledPoint.msg
src/hubert_launch/srv/: HubertPrompt.srv
src/hubert_natural_language/: CMakeLists.txt  package.xml
src/hubert_natural_language/scripts/: hubert_natural_language.py
src/hubert_ov_seg/: CMakeLists.txt  package.xml
src/hubert_ov_seg/config/: rviz_config.rviz  (+1 more)
src/moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_config/config/: fake_controllers.yaml  gazebo_hubert_robot.urdf  hubert_robot.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/moveit_config/launch/: gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/moveit_config/src/: moveit_test.py  test.py
src/myrobot_description/: CMakeLists.txt  check_urdf.launch  package.xml  rviz_config.rviz  setup.py
(+23 files in other folders)
